tests/baselines/reference/invalidBooleanAssignments.errors.txt
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(3,5): error TS2322: Type '为真' is not assignable to type '数字'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(4,5): error TS2322: Type '为真' is not assignable to type '文字'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(5,5): error TS2322: Type '为真' is not assignable to type '无值'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(9,5): error TS2322: Type '为真' is not assignable to type 'E'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(12,5): error TS2322: Type '为真' is not assignable to type 'C'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(15,5): error TS2322: Type '为真' is not assignable to type 'I'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(17,5): error TS2322: Type '为真' is not assignable to type '() => 文字'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(21,1): error TS2539: Cannot assign to 'M' because it is not a variable.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(24,5): error TS2322: Type '真假' is not assignable to type 'T'.
tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts(26,1): error TS2539: Cannot assign to 'i' because it is not a variable.


==== tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts (10 errors) ====
    var x = true;
    
    var a: number = x;
        ~
!!! error TS2322: Type '为真' is not assignable to type '数字'.
    var b: string = x;
        ~
!!! error TS2322: Type '为真' is not assignable to type '文字'.
    var c: void = x;
        ~
!!! error TS2322: Type '为真' is not assignable to type '无值'.
    var d: typeof undefined = x;
    
    enum E { A }
    var e: E = x;
        ~
!!! error TS2322: Type '为真' is not assignable to type 'E'.
    
    class C { foo: string }
    var f: C = x;
        ~
!!! error TS2322: Type '为真' is not assignable to type 'C'.
    
    interface I { bar: string }
    var g: I = x;
        ~
!!! error TS2322: Type '为真' is not assignable to type 'I'.
    
    var h: { (): string } = x;
        ~
!!! error TS2322: Type '为真' is not assignable to type '() => 文字'.
    var h2: { toString(): string } = x; // no error
    
    module M { export var a = 1; }
    M = x;
    ~
!!! error TS2539: Cannot assign to 'M' because it is not a variable.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2322: Type '真假' is not assignable to type 'T'.
    }
    i = x;
    ~
!!! error TS2539: Cannot assign to 'i' because it is not a variable.